# aws-nitro-enclaves-image-format

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
eif_build/: Cargo.toml  README.md
eif_build/src/: main.rs
eif_extract/: Cargo.toml
eif_extract/src/: main.rs
examples/: eif_build.rs
src/: eif_hasher.rs  lib.rs
src/defs/: eif_hasher.rs  mod.rs
src/utils/: eif_reader.rs  eif_signer.rs  identity.rs  mod.rs
