[package]
name = "aws-nitro-enclaves-image-format"
version = "0.2.0"
authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
edition = "2018"
license = "Apache-2.0"
description = "This library provides the definition of the enclave image format (EIF) file used in AWS Nitro Enclaves."
repository = "https://github.com/aws/aws-nitro-enclaves-image-format"
readme = "README.md"
keywords = ["Nitro", "Enclaves", "AWS"]
rust-version = "1.58"

[dependencies]
sha2 = "0.9.5"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"
num-derive = "0.3"
byteorder = "1.3"
clap = "3.2"
hex = "0.4"
crc = "3.0"
aws-nitro-enclaves-cose = "0.5"
openssl = "0.10"
serde_cbor = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock"]}
