[package]
name = "aws-nitro-enclaves-image-format"
version = "0.5.0"
authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
edition = "2018"
license = "Apache-2.0"
description = "This library provides the definition of the enclave image format (EIF) file used in AWS Nitro Enclaves."
repository = "https://github.com/aws/aws-nitro-enclaves-image-format"
readme = "README.md"
keywords = ["Nitro", "Enclaves", "AWS"]
rust-version = "1.71"

[dependencies]
sha2 = "0.9.5"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"
num-derive = "0.4"
byteorder = "1.3"
hex = "0.4"
crc = "3.0"
aws-nitro-enclaves-cose = { version = "0.5", features = ["key_kms"] }
openssl = "0.10"
serde_cbor = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock"]}
# These dependencies with versions less than specified are coming from
# `aws-nitro-enclaves-cose` crate.
aws-sdk-kms = "<=1.20"
aws-config = "<=1.1"
aws-types = "<=1.1"
aws-smithy-runtime = { version = "<=1.2" }
# Needed by `aws-nitro-enclaves-cose` to perform calls to KMS.
tokio = { version = "1.20", features = ["rt-multi-thread"] }
regex = "1.0"

[dev-dependencies]
tempfile = "3.5"

[workspace]
members = [
    ".",  # aws-nitro-enclaves-image-format
    "eif_build",  # The eif_build CLI tool
]
