[package]
name = "eif_build"
version = "0.2.0"
authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
edition = "2018"
license = "Apache-2.0"
description = "This CLI tool provides a low level path to assemble an enclave image format (EIF) file used in AWS Nitro Enclaves."
repository = "https://github.com/aws/aws-nitro-enclaves-image-format"
readme = "README.md"
keywords = ["Nitro", "Enclaves", "AWS", "EIF"]
rust-version = "1.68"

[dependencies]
# local dependencies
aws-nitro-enclaves-image-format = { path = ".." }

# workspace dependencies
chrono.workspace     = true
serde.workspace      = true
serde_json.workspace = true
sha2.workspace       = true

clap = { version = "~4.2", features = ["derive"] }
